<resources>
    <string name="app_name">Let\'s Chat</string>
    <string name="need_an_account">Need An Account</string>
    <string name="logout">Logout</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="users">Users</string>
    <string name="setting">Setting</string>
    <string name="create_your_account">Create your account</string>

    <string name="already_have_account">Already Have Account?</string>

    <string name="login_your_account">Login Your Account</string>
    <string name="sign_in">Sign In</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hi_there_i_m_using_let_s_chat">Hi there I\'m using Let\'s Chat</string>
    <string name="change_status">change status</string>

</resources>
