<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ram.letschat.RegisterActivity">

    <include
        android:id="@+id/register_appbar"
        layout="@layout/appbar_layout"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/reg_name"
        android:layout_below="@+id/register_appbar"
        android:layout_marginTop="29dp"
        android:text="@string/create_your_account"
        android:textSize="20dp"
        android:textColor="@color/colorPrimary"

        android:textStyle="bold"/>

    <EditText
        android:id="@+id/reg_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="130dp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:hint="@string/name"
        android:inputType="text"/>

    <EditText
        android:id="@+id/reg_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/reg_name"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"/>

    <EditText
        android:id="@+id/reg_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/reg_name"
        android:layout_marginTop="70sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/reg_password"
        android:layout_below="@+id/reg_password"
        android:layout_marginTop="25dp"
        android:text="@string/create_account"
        android:textStyle="bold"
        android:padding="10sp"
        android:background="@color/colorAccent"/>
</RelativeLayout>
