<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/log_email"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ram.letschat.RegisterActivity">

    <include
        android:id="@+id/login_appbar"
        layout="@layout/appbar_layout" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/login_appbar"
        android:layout_margin="20sp"
        android:layout_marginTop="20sp"
        android:text="@string/login_your_account"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"

        />

    <EditText
        android:id="@+id/log1_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginEnd="20sp"
        android:layout_marginTop="25sp"
        android:background="@drawable/input_background"
        android:padding="10sp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/log_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/log1_email"
        android:layout_below="@+id/log1_email"
        android:layout_marginEnd="20sp"
        android:layout_marginTop="8sp"
        android:ems="10"
        android:background="@drawable/input_background"
        android:padding="10sp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/log_password"
        android:layout_below="@+id/log_password"
        android:layout_marginTop="12dp"
        android:layout_marginStart="20dp"
        android:text="@string/sign_in"
        android:textStyle="bold"
        android:textSize="15sp"

        android:background="@drawable/btn_backgroud"
        android:padding="10dp"


        />

    <TextView
        android:id="@+id/forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/login_btn"
        android:layout_below="@+id/login_btn"
        android:layout_marginStart="98dp"
        android:layout_marginTop="37dp"
        android:text="Forgot Password?"
        android:gravity="center"
        android:textColor="#f20808"
        android:textSize="15dp" />




</RelativeLayout>
